Fixed height issue In previous upload there was an error with the height of the artwork and it was squashed down. I adjusted it and this version is the proper file. Now the project along with 2 artworks, is working as it should be and is responsive for devices.

--- a/zenitsu.css
+++ b/zenitsu.css
@@ -1,6 +1,13 @@
 .zenitsu__wrapper{
     height: 100vh;
+    /* background-color: rgb(116, 116, 255); */
 }
+
+.container__all{
+    width: 100vh;
+    height: 100vh;
+}
+
 
 @media all and (max-width: 900px){
 
@@ -4388,7 +4395,7 @@
 
 .zpolygon337{
     position: absolute;
-    z-index: 150;
+    z-index: 140;
     height: 100%;
     width: 100%;
     background-color: #414141;
